fixed z-index in the prev fix

--- a/examples/ballsinki.css
+++ b/examples/ballsinki.css
@@ -549,6 +549,7 @@ button:focus {
   display: inline-block;
   top: 33%;
   position: relative;
+  z-index: 100000000;
 }
 
 .landing-title {
@@ -562,10 +563,9 @@ button:focus {
 }
 #landing-title-section {
   height: 33vh;
+  z-index: 100000000;
 }
 #landing-page-wrapper {
-
-  z-index: 9000;
   width: 100%;
   height: 100%;
   position: absolute;
